--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = { version = "4.2.1"  }
+actix-web = { version = "4.2.1", features = ["openssl"] }
+openssl = { version = "0.10", features = ["v110"] }
 serde = { version = "1.0.130", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.14"
