--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ dotenv = "0.15.0"
 futures = "0.3.25"
 chrono = { version = "0.4.23", features = ["serde"] }
 actix-cors = "0.6.4"
+actix-web-httpauth = "0.8.0"
